--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,7 +5,40 @@
     <title>BuddyBoard</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Existing Favicon -->
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+
+    <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="BuddyBoard is a collaborative web application for creating, organizing, and sharing flashcards and study decks. Engage with a vibrant learning community."
+    />
+    <meta
+      name="keywords"
+      content="BuddyBoard, Flashcards, Study Decks, Collaborative Learning, Knowledge Sharing, Community Engagement, Private Decks, Public Decks, Study Tools"
+    />
+    <meta name="author" content="BuddyBoard Team" />
+
+    <!-- Open Graph Meta Tags (For Social Media Preview) -->
+    <meta property="og:title" content="BuddyBoard: Your Partner in Collaborative Learning" />
+    <meta
+      property="og:description"
+      content="Create, organize, and share custom flashcards and study decks. Engage with a vibrant learning community on BuddyBoard."
+    />
+    <meta property="og:image" content="favicon.ico" />
+    <!-- <meta property="og:url" content="Add the deployed link here" /> -->
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="BuddyBoard: Your Partner in Collaborative Learning" />
+    <meta
+      name="twitter:description"
+      content="Enhance your study experience with BuddyBoard! Create flashcards, share decks, and connect with a collaborative learning community."
+    />
+    <meta name="twitter:image" content="favicon.ico" />
+
     <!-- FontAwesome CDN -->
     <link
       rel="stylesheet"
